Start using Q module

--- a/node_tools/package.json
+++ b/node_tools/package.json
@@ -11,7 +11,8 @@
   "bugs": {
   },
   "dependencies": {
-    "nba": "latest"
+    "nba": "latest",
+    "q": "latest"
   },
   "devDependencies": {
   },
